--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <title>My Protfolio</title>
+    <title>Neha Rani's Protfolio</title>
   </head>
   <body>
     <div id="root"></div>
